# mb_master

./: .gitignore  CMakeLists.txt  GGWP1  ModbusLog.txt
scripts/: virtual_com.sh
src/: CMakeLists.txt
src/example/use_ini/: mb.ini  new_ini.cpp
src/example/use_mb/: example.ini  example_use.ini  example_use1.ini  main copy 2.cpp  main copy 3.cpp  main copy 4.cpp  main copy.cpp  main.cpp
src/helpers/: ObjectPool.h  Queue.h  String.cpp
src/log/: CMakeLists.txt  Logger.cpp  Logger.h
src/mb/: CMakeLists.txt  MB.cpp  MB.h
src/mb/action/: ActionManager.cpp  ActionManager.h  CMakeLists.txt
src/mb/action/modbus/: ModbusMaster.cpp  ModbusMaster.h
src/mb/action/request/: DirectRequest.h  DirectRequestManager.cpp  DirectRequestManager.h  DirectRequestPool.h
src/mb/config/: Config.h  ConfigKeys.h
src/mb/data/: CMakeLists.txt  DataManager.cpp  DataManager.h
src/mb/data/range/: RangeManager.cpp  RangeManager.h
src/mb/data/reg/: RegManager.cpp  RegManager.h
src/mb/data/request/: RequestManager.cpp  RequestManager.h
src/mb/interface/: IMB.h
src/mb/mem/: CMakeLists.txt  MemManager.cpp  MemManager.h
src/mb/types/: MemoryChunk.h  ModbusConnection.h  ModbusEnums.h  ModbusRegister.h  ModbusRequest.h  ModbusTrans.h
